# gest-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml  publish-to-pypi.yml  test.yml
docs/: Makefile  conf.py  generator.rst  index.rst  vocs.rst
docs/parameters/: _dtype_note.rst  constants.rst  constraints.rst  objectives.rst  observables.rst  variable.rst  variables.rst
gest_api/: generator.py  vocs.py
gest_api/tests/: test_generator.py  test_vocs.py
